--- a/assets/styles/basics.less
+++ b/assets/styles/basics.less
@@ -67,6 +67,14 @@ a {
         color: @sky;
         border-color: @sky;
     }
+    &.selected {
+        background: @carbon;
+        color: white;
+        &:hover{
+            color: white;
+            border: 3px solid @carbon;
+        }
+    }
 }
 
 //Buttons
