--- a/assets/styles/custom.less
+++ b/assets/styles/custom.less
@@ -45,4 +45,34 @@
     background-color: @lightgray;
 }
 
+.cta {
+    box-sizing: border-box;
+    display: table;
+}
+
+.cta-section {
+    height: 100%;
+    display: table-cell;
+    vertical-align: top;
+}
+
+.cta-content {
+    display: inline-block;
+    margin: 10px;
+//    background: @sky;
+    border-radius: 6px;
+    padding: 5px 15px 15px;
+    height: 100%;
+    width: 100%;
+}
+
+.right {
+    float: right;
+    margin-left: 15px;
+}
+
+.cta-icon {
+    width: 100px;
+}
+
 footer {}
