Standardized navbar across all tabs

--- a/views/account.ejs
+++ b/views/account.ejs
@@ -5,9 +5,9 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="reservations">Reservations</a></li>
-                <li><a href="devices">Devices</a></li>
-                <li><a href="classrooms">Classrooms</a></li>
-                <li class="active"><a href="">Account</a></li>
+                <li><a href="/getalldevices">Devices</a></li>
+                <li><a href="/getallclassrooms">Classrooms</a></li>
+                <li class="active"><a href="account">Account</a></li>
                 <li><a href="" id="signOut" onclick="auth2.signOut()">Logout</a></li>
             </ul>
         </div>
