--- a/views/classrooms.ejs
+++ b/views/classrooms.ejs
@@ -5,10 +5,10 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="reservations">Reservations</a></li>
-        <li><a href="devices">Devices</a></li>
-        <li class="active"><a href="">Classrooms</a></li>
+        <li><a href="/getalldevices">Devices</a></li>
+        <li class="active"><a href="/getallclassrooms">Classrooms</a></li>
         <li><a href="account">Account</a></li>
-        <li><a href="">Logout</a></li>
+        <li><a href="" id="signOut" onclick="auth2.signOut()">Logout</a></li>
       </ul>
     </div>
   </div>
