--- a/views/devices.ejs
+++ b/views/devices.ejs
@@ -8,7 +8,7 @@
                 <li class="active"><a href="/getalldevices">Devices</a></li>
                 <li><a href="/getallclassrooms">Classrooms</a></li>
                 <li><a href="account">Account</a></li>
-                <li><a href="">Logout</a></li>
+                <li><a href="" id="signOut" onclick="auth2.signOut()">Logout</a></li>
             </ul>
         </div>
     </div>
@@ -66,6 +66,11 @@
         </div>
 
         <div class="form-group">
+          <label for="userID">User ID:</label>
+          <input type="text" class="form-control" name="userID" id="userID">
+        </div>
+
+        <div class="form-group">
           <label for="deviceReserveDate">Date Reserved:</label>
           <input type="date" class="form-control" id="deviceReserveDate" name="deviceReserveDate">
         </div>
@@ -77,6 +82,7 @@
 
       </div>
       <div class="modal-footer">
+        <button type="submit" class="btn" name="makeDeviceReservation" id="makeDeviceReservation">Create Reservation</button>
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
       </div>
     </div>
