Trying to test something with tests

--- a/views/email.ejs
+++ b/views/email.ejs
@@ -1,12 +1,8 @@
 <div>
-  <h1>UserID: <%= userObjects[0].UserID %></h1>
-  <h1>TranscriptID: <%= userObjects[0].TranscriptID %></h1>
-  <h1>ExpectedGradYear: <%= userObjects[0].ExpectedGradYear %></h1>
-<!--
-  <h1>Email: <%= userObjects[0].Email %></h1>
-  <h1>Type: <%= userObjects[0].Type %></h1>
-  <h1>Firstname: <%= userObjects[0].Firstname %></h1>
-  <h1>Lastname: <%= userObjects[0].Lastname %></h1>
-  <h1>AuthToken: <%= userObjects[0].AuthToken %></h1>
--->
+    <h1>Get user by Email</h1>
+    <h6>Email: <%= userObjects[0].Email %></h6>
+    <h6>Type: <%= userObjects[0].Type %></h6>
+    <h6>Firstname: <%= userObjects[0].Firstname %></h6>
+    <h6>Lastname: <%= userObjects[0].Lastname %></h6>
+    <h6>AuthToken: <%= userObjects[0].AuthToken %></h6>
 </div>
