--- a/views/classrooms.ejs
+++ b/views/classrooms.ejs
@@ -38,6 +38,9 @@
         <td><%= userObjects[i].Building %></td>
         <td><%= userObjects[i].RoomNumber %></td>
         <td><%= userObjects[i].Capacity %></td>
+        <td>
+          <button type="button" class="open-reserveclass btn btn-sm" data-toggle="modal" data-target="#reserveClass" data-device-name="<%= userObjects[i].DeviceName %>">Reserve</button>
+        </td>
       </tr>
       </tbody>
 
@@ -45,3 +48,52 @@
     </table>
   </div>
 </div>
+
+
+<!-- Return Modal -->
+<div id="reserveClass" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Reserve Classroom</h4> </div>
+      <div class="modal-body">
+        <p>You are reserving the following classroom:</p>
+
+        <div class="form-group">
+          <label for="building">Building Name:</label>
+          <input type="text" class="form-control" name="building" id="building">
+        </div>
+
+        <div class="form-group">
+          <label for="RoomNumber">Room Number:</label>
+          <input type="text" class="form-control" name="RoomNumber" id="RoomNumber">
+        </div>
+
+        <div class="form-group">
+          <label for="classStartDate">Start Date:</label>
+          <input type="date" class="form-control" id="classReserveDate" name="classReserveDate">
+        </div>
+
+        <div class="form-group">
+          <label for="classEndDate">End Date:</label>
+          <input type="date" class="form-control" id="classEndDate" name="classEndDate">
+        </div>
+
+      </div>
+      <div class="modal-footer">
+        <button type="submit" class="btn" name="makeClassReservation" id="makeClassReservation">Create Reservation</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script src="/js/jquery.min.js"></script>
+<script>
+  $(document).on("click", ".open-reserveclass", function () {
+    var deviceName = $(this).data('device-name');
+    $(".modal-body #deviceName").val(deviceName);
+  });
+</script>
