--- a/views/account.ejs
+++ b/views/account.ejs
@@ -25,35 +25,28 @@
         </div>
         <div class="col-sm-12 col-md-6">
             <h2>Reserved Devices</h2>
-            <table class="table table-striped">
-                <thead class="th active">
-                    <th>Device Name</th>
-                    <th>Date Reserved</th>
-                    <th>Date Due</th>
-                    <th>Reserve Condition</th>
-                    <th></th>
-                </thead>
-                <tbody class="tb active">
-                    <tr>
-                        <td>Laptop</td>
-                        <td>1/1/16</td>
-                        <td>1/5/16</td>
-                        <td>New</td>
-                        <!-- Return Device Button -->
-                        <td>
-                            <button type="button" class="open-returndevice btn btn-sm" data-toggle="modal" data-target="#returnDevice" data-device-name="Laptop">Return</button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Kindle</td>
-                        <td>1/1/16</td>
-                        <td>1/5/16</td>
-                        <td>Screen Scratched</td>
-                        <td>
-                            <button type="button" class="open-returndevice btn btn-sm" data-toggle="modal" data-target="#returnDevice" data-device-name="Kindle">Return</button>
-                        </td>
-                    </tr>
-                </tbody>
+            <table id="poop" class="table table-striped">
+              <thead>
+                <th>ID</th>
+                <th>Start Date</th>
+                <th>End Date</th>
+                <th>Return</th>
+              </thead>
+
+              <% if (userObjects){
+              if (userObjects[0].hasOwnProperty("DeviceReservationID")){
+                  for(var i=0; i < userObjects.length; i++) {%>
+                      <tbody>
+                        <tr>
+                          <td><%= userObjects[i].DeviceReservationID %></td>
+                          <td><%= userObjects[i].StartDate %></td>
+                          <td><%= userObjects[i].EndDate %></td>
+                          <td>
+                            <button type="button" class="open-returndevice btn btn-sm" data-toggle="modal" data-target="#returnDevice" data-id="<%= userObjects[i].DeviceReservationID %>">Return</button>
+                          </td>
+                          <% }}}%>
+                        </tr>
+                      </tbody>
             </table>
         </div>
     </div>
@@ -67,10 +60,9 @@
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <h4 class="modal-title">Return Device</h4> </div>
             <div class="modal-body">
-                <p>You are returning a device.</p>
-                <b><output name="deviceName" id="deviceName"></output></b>
+                <p>Are you sure you want to return this device?</p>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="close-returndevice btn btn-default" data-dismiss="modal">Return</button>
             </div>
         </div>
     </div>
@@ -78,7 +70,7 @@
 <script src="/js/jquery.min.js"></script>
 <script>
     $(document).on("click", ".open-returndevice", function () {
-        var deviceName = $(this).data('device-name');
-        $(".modal-body #deviceName").val(deviceName);
+        var devicereservationid = $('.open-returndevice').data('id');
+        $.post( '/removedevicereservation', {devicereservationid: 'devicereservationid'} );
     });
 </script>
