Front end changes

--- a/assets/styles/custom.less
+++ b/assets/styles/custom.less
@@ -45,16 +45,23 @@
     background-color: @lightgray;
 }
 
+.thumbnail{
+    &:hover{
+        border: 1px solid @watermelon;
+    }
+}
+
 .cta {
     box-sizing: border-box;
     display: table;
+    margin-top: 40px; 
 }
 
 .cta-section {
     height: 100%;
     display: table-cell;
     vertical-align: top;
-    width: 50%;
+//    width: 50%;
 }
 
 .cta-content {
@@ -64,7 +71,7 @@
     border-radius: 6px;
     padding: 5px 15px 15px;
     height: 100%;
-    width: 100%;
+//    width: 100%;
 }
 
 .right {
@@ -74,6 +81,11 @@
 
 .cta-icon {
     width: 100px;
+}
+
+
+.center-text{
+    text-align: center;
 }
 
 footer {}
