--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,88 +4,57 @@
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button> <a class="navbar-brand" href="dashboard">Facilities</a> </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="reservations">Reservations</a></li>
-                <li><a href="devices">Devices</a></li>
-                <li><a href="classrooms">Classrooms</a></li>
-                <li><a href="account">Account</a></li>
+                <li><a href="/devices">Devices</a></li>
+                <li><a href="/classrooms">Classrooms</a></li>
+                <li><a href="/account">Account</a></li>
                 <li><a href="/logout">Logout</a></li>
             </ul>
         </div>
     </div>
 </nav>
 <div class="container">
-    <h1>Welcome to Facilities</h1>
-    <div class="row cta">
-        <div class="col-md-6 cta-section">
-            <div class="cta-content">
-                <h2>Reserve a Device</h2>
-                <img src="img/laptop.png" alt="" class="cta-icon right">
-                <p>Ne pro dico elitr, et bonorum fabulas vim. Erat latine detracto cu vix. Pro ponderum lucilius et, brute causae ad nec. Sed ad mucius postulant. Te dico debet urbanitas mel. Nam graeco suscipit id.</p>
+    <h1>Facilities</h1>
+    <div class="cta row">
+        <div class="col-xs-6 col-sm-6 col-md-3 cta-section">
+            <div class="thumbnail"> <a href="/devices"><img src="img/laptop.png" alt="Device Icon"></a>
+                <div class="caption">
+                    <h2>Reserve a Device</h2>
+                    <p>Have a laptop in the shop? Don’t worry, we got you covered. Reserve a device to borrow!</p>
+                </div>
             </div>
         </div>
-        <div class="col-md-6 cta-section">
-            <div class="cta-content">
-                <h2>Reserve a Classroom</h2>
-                <img src="img/laptop.png" alt="" class="cta-icon right">
-                <p>Ea est audiam virtute, maiorum dissentias conclusionemque mei ut, ex vis dicit primis disputando. Dicant soleat torquatos in mel. Cu quo delenit facilisis dignissim, albucius mnesarchum mediocritatem sed ad. Pri id labore postulant, te natum eirmod dolorum eam. In vix dolore eruditi, id sit dicant nullam.</p>
+        <div class="col-xs-6 col-sm-6 col-md-3 cta-section">
+            <div class="thumbnail"><a href="/classrooms"> <img src="img/classroom.png" alt="Classroom Icon"></a>
+                <div class="caption">
+                    <h2>Reserve a Classroom</h2>
+                    <p>Schedule your classes, now! The one with the nice view is yours if you hurry!</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-xs-6 col-sm-6 col-md-3 cta-section">
+            <div class="thumbnail"> <a href="/account"><img src="img/user.png" alt="User Icon"></a>
+                <div class="caption">
+                    <h2>See your Account</h2>
+                    <p>Profile, device registration, classroom views. Make sure you don’t have devices overdue!</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-xs-6 col-sm-6 col-md-3 cta-section">
+            <div class="thumbnail">
+                <img src="img/tiger.png" alt="Tiger Icon">
+                <div class="caption">
+                    <h2>System</h2>
+                    <p>Check out the websites of the other departments:</p>
+                    <ul>
+                        <li><a href="">BookStore</a></li>
+                        <li><a href="">University Human Resources</a></li>
+                        <li><a href="">Student Enrollment System</a></li>
+                        <li><a href="">Co-op Evaluation</a></li>
+                        <li><a href="">Student Grading System</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
-    <div class="row cta">
-        <div class="col-md-6 cta-section">
-            <div class="cta-content">
-                <h2>See your Account</h2>
-                <img src="img/laptop.png" alt="" class="cta-icon right">
-                <p>Viderer efficiendi ex vim, nam eu facilis antiopam dignissim, possim scriptorem nam ut. Vix et eirmod malorum interpretaris. Sea no quaeque cotidieque reprehendunt, at nulla saepe dolores his, ea eos dolor nominati suscipiantur.</p>
-            </div>
-        </div>
-        <div class="col-md-6 cta-section">
-            <div class="cta-content">
-                <h2>System</h2>
-                <ul>
-                    <li><a href="">BookStore</a></li>
-                    <li><a href="">University Human Resources</a></li>
-                    <li><a href="">Student Enrollment System</a></li>
-                    <li><a href="">Co-op Evaluation</a></li>
-                    <li><a href="">Student Grading System</a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-6">
-            <% if (userObjects){
-                if (userObjects[0].hasOwnProperty("StudentID")){for(var i=0; i < userObjects.length; i++) { %>
-                <p>StudentID:
-                    <%= userObjects[i].StudentID %>
-                </p>
-                <p>UserID:
-                    <%= userObjects[i].UserID %>
-                </p>
-                <p>TranscriptID:
-                    <%= userObjects[i].TranscriptID %>
-                </p>
-                <p>ExpectedGradYear:
-                    <%= userObjects[i].ExpectedGradYear %>
-                </p>
-                <br/>
-                <br/>
-                <% }} %>
-        </div>
-        <div class="col-md-6">
-            <% if (userObjects[0].hasOwnProperty("InstructorID")){for(var i=0; i < userObjects.length; i++) { %>
-                <p>InstructorID:
-                    <%= userObjects.get_all_students[i].InstructorID %>
-                </p>
-                <p>UserID:
-                    <%= userObjects.get_all_students[i].UserID %>
-                </p>
-                <p>DepartmentID:
-                    <%= userObjects.get_all_students[i].DepartmentID %>
-                </p>
-                <br/>
-                <br/>
-                <% }}} %>
-        </div>
-    </div>
+    <div class="row cta"> </div>
 </div>
