--- a/assets/styles/basics.less
+++ b/assets/styles/basics.less
@@ -36,7 +36,7 @@ a {
     color: inherit;
     background: none;
     cursor: pointer;
-    padding: 10px 20px;
+    padding: 10px 40px;
     display: inline-block;
     margin: 10px auto;
     text-transform: uppercase;
@@ -50,7 +50,6 @@ a {
     border: 3px solid @carbon;
     color: @carbon;
     box-sizing: border-box;
-    width: 100%;
     &:after {
         content: '';
         position: absolute;
@@ -74,6 +73,9 @@ a {
             color: white;
             border: 3px solid @carbon;
         }
+    }
+    &.full {
+        width: 100%;
     }
 }
 
