--- a/views/classrooms.ejs
+++ b/views/classrooms.ejs
@@ -1,99 +1,91 @@
 <nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button> <a class="navbar-brand" href="dashboard">Facilities</a> </div>
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="reservations">Reservations</a></li>
-        <li><a href="/getalldevices">Devices</a></li>
-        <li class="active"><a href="/getallclassrooms">Classrooms</a></li>
-        <li><a href="account">Account</a></li>
-        <li><a href="" id="signOut" onclick="auth2.signOut()">Logout</a></li>
-      </ul>
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button> <a class="navbar-brand" href="dashboard">Facilities</a> </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="devices">Devices</a></li>
+                <li><a href="classrooms">Classrooms</a></li>
+                <li><a href="account">Account</a></li>
+                <li><a href="/logout">Logout</a></li>
+            </ul>
+        </div>
     </div>
-  </div>
 </nav>
 <div class="container">
-  <div class="page-header">
-    <h1>Classrooms <small>All classrooms available</small></h1> </div>
-  <div class="row"/>
-  <div class="col-sm-12">
-    <p>This will show a full list of classrooms</p>
-  </div>
-  <div class="container">
-    <table class="table table-striped">
-      <thead>
-        <th>ID</th>
-        <th>Building</th>
-        <th>Room</th>
-        <th>Capacity</th>
-      </thead>
-
-      <% if (userObjects){
+    <div class="page-header">
+        <h1>Classrooms <small>All classrooms available</small></h1> </div>
+    <div class="row" />
+    <div class="col-sm-12">
+        <p>This will show a full list of classrooms</p>
+    </div>
+    <div class="container">
+        <table class="table table-striped">
+            <thead>
+                <th>ID</th>
+                <th>Building</th>
+                <th>Room</th>
+                <th>Capacity</th>
+            </thead>
+            <% if (userObjects){
       if (userObjects[0].hasOwnProperty("ClassroomID")){for(var i=0; i < userObjects.length; i++) { %>
-
-      <tbody>
-      <tr>
-        <td><%= userObjects[i].ClassroomID %></td>
-        <td><%= userObjects[i].Building %></td>
-        <td><%= userObjects[i].RoomNumber %></td>
-        <td><%= userObjects[i].Capacity %></td>
-        <td>
-          <button type="button" class="open-reserveclass btn btn-sm" data-toggle="modal" data-target="#reserveClass" data-device-name="<%= userObjects[i].DeviceName %>">Reserve</button>
-        </td>
-      </tr>
-      </tbody>
-
-      <% }}}%>
-    </table>
-  </div>
+                <tbody>
+                    <tr>
+                        <td>
+                            <%= userObjects[i].ClassroomID %>
+                        </td>
+                        <td>
+                            <%= userObjects[i].Building %>
+                        </td>
+                        <td>
+                            <%= userObjects[i].RoomNumber %>
+                        </td>
+                        <td>
+                            <%= userObjects[i].Capacity %>
+                        </td>
+                        <td>
+                            <button type="button" class="open-reserveclass btn btn-sm" data-toggle="modal" data-target="#reserveClass" data-device-name="<%= userObjects[i].DeviceName %>">Reserve</button>
+                        </td>
+                    </tr>
+                </tbody>
+                <% }}}%>
+        </table>
+    </div>
 </div>
-
-
 <!-- Return Modal -->
 <div id="reserveClass" class="modal fade" role="dialog">
-  <div class="modal-dialog">
-    <!-- Modal content-->
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Reserve Classroom</h4> </div>
-      <div class="modal-body">
-        <p>You are reserving the following classroom:</p>
-
-        <div class="form-group">
-          <label for="building">Building Name:</label>
-          <input type="text" class="form-control" name="building" id="building">
+    <div class="modal-dialog">
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Reserve Classroom</h4> </div>
+            <div class="modal-body">
+                <p>You are reserving the following classroom:</p>
+                <div class="form-group">
+                    <label for="building">Building Name:</label>
+                    <input type="text" class="form-control" name="building" id="building"> </div>
+                <div class="form-group">
+                    <label for="RoomNumber">Room Number:</label>
+                    <input type="text" class="form-control" name="RoomNumber" id="RoomNumber"> </div>
+                <div class="form-group">
+                    <label for="classStartDate">Start Date:</label>
+                    <input type="date" class="form-control" id="classReserveDate" name="classReserveDate"> </div>
+                <div class="form-group">
+                    <label for="classEndDate">End Date:</label>
+                    <input type="date" class="form-control" id="classEndDate" name="classEndDate"> </div>
+            </div>
+            <div class="modal-footer">
+                <button type="submit" class="btn" name="makeClassReservation" id="makeClassReservation">Create Reservation</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
         </div>
-
-        <div class="form-group">
-          <label for="RoomNumber">Room Number:</label>
-          <input type="text" class="form-control" name="RoomNumber" id="RoomNumber">
-        </div>
-
-        <div class="form-group">
-          <label for="classStartDate">Start Date:</label>
-          <input type="date" class="form-control" id="classReserveDate" name="classReserveDate">
-        </div>
-
-        <div class="form-group">
-          <label for="classEndDate">End Date:</label>
-          <input type="date" class="form-control" id="classEndDate" name="classEndDate">
-        </div>
-
-      </div>
-      <div class="modal-footer">
-        <button type="submit" class="btn" name="makeClassReservation" id="makeClassReservation">Create Reservation</button>
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      </div>
     </div>
-  </div>
 </div>
-
 <script src="/js/jquery.min.js"></script>
 <script>
-  $(document).on("click", ".open-reserveclass", function () {
-    var deviceName = $(this).data('device-name');
-    $(".modal-body #deviceName").val(deviceName);
-  });
+    $(document).on("click", ".open-reserveclass", function () {
+        var deviceName = $(this).data('device-name');
+        $(".modal-body #deviceName").val(deviceName);
+    });
 </script>
