--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,33 +15,38 @@
 <div class="container">
     <h1>Facilities</h1>
     <div class="cta row">
-        <div class="col-xs-6 col-sm-6 col-md-3 cta-section">
-            <div class="thumbnail"> <a href="/devices"><img src="img/laptop.png" alt="Device Icon"></a>
+        <div class="col-xs-12 col-sm-6 col-md-4 cta-section">
+            <div class="thumbnail">
+                <a href="/devices"><img src="img/laptop.png" alt="Device Icon"></a>
                 <div class="caption">
                     <h2>Reserve a Device</h2>
                     <p>Have a laptop in the shop? Don’t worry, we got you covered. Reserve a device to borrow!</p>
                 </div>
             </div>
         </div>
-        <div class="col-xs-6 col-sm-6 col-md-3 cta-section">
-            <div class="thumbnail"><a href="/classrooms"> <img src="img/classroom.png" alt="Classroom Icon"></a>
+        <div class="col-xs-12 col-sm-6 col-md-4 cta-section">
+            <div class="thumbnail">
+                <a href="/classrooms"> <img src="img/classroom.png" alt="Classroom Icon"></a>
                 <div class="caption">
                     <h2>Reserve a Classroom</h2>
                     <p>Schedule your classes, now! The one with the nice view is yours if you hurry!</p>
                 </div>
             </div>
         </div>
-        <div class="col-xs-6 col-sm-6 col-md-3 cta-section">
-            <div class="thumbnail"> <a href="/account"><img src="img/user.png" alt="User Icon"></a>
+        <div class="col-xs-12 col-sm-6 col-md-4 cta-section">
+            <div class="thumbnail">
+                <a href="/account"><img src="img/user.png" alt="User Icon"></a>
                 <div class="caption">
                     <h2>See your Account</h2>
                     <p>Profile, device registration, classroom views. Make sure you don’t have devices overdue!</p>
                 </div>
             </div>
         </div>
-        <div class="col-xs-6 col-sm-6 col-md-3 cta-section">
-            <div class="thumbnail">
-                <img src="img/tiger.png" alt="Tiger Icon">
+    </div>
+    <div class="cta row">
+        <div class="col-xs-12 col-sm-6 cta-section">
+            <div class="thumbnail"> 
+                <img src="img/tiger.png" alt="Tiger Icon" />
                 <div class="caption">
                     <h2>System</h2>
                     <p>Check out the websites of the other departments:</p>
@@ -55,6 +60,11 @@
                 </div>
             </div>
         </div>
+        <div class="col-xs-12 col-sm-6 cta-section">
+            <div class="thumbnail">
+                <h2>Check out our Twitter</h2> <a class="twitter-timeline" data-height="450" data-link-color="#FF3B3F" href="https://twitter.com/Facilities344">Tweets by Facilities344</a>
+                <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+            </div>
+        </div>
     </div>
-    <div class="row cta"> </div>
 </div>
