--- a/views/account.ejs
+++ b/views/account.ejs
@@ -4,10 +4,11 @@
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button> <a class="navbar-brand" href="dashboard">Facilities</a> </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="devices">Devices</a></li>
-                <li><a href="classrooms">Classrooms</a></li>
-                <li><a href="account">Account</a></li>
-                <li><a href="/logout">Logout</a></li>
+                <li><a href="reservations">Reservations</a></li>
+                <li><a href="/getalldevices">Devices</a></li>
+                <li><a href="/getallclassrooms">Classrooms</a></li>
+                <li class="active"><a href="/getalldevicereservations">Account</a></li>
+                <li><a href="" id="signOut" onclick="auth2.signOut()">Logout</a></li>
             </ul>
         </div>
     </div>
@@ -31,6 +32,8 @@
                 <th>End Date</th>
                 <th>Return</th>
               </thead>
+
+              <% console.log(userObjects[0]) %>
 
               <% if (userObjects){
               if (userObjects[0].hasOwnProperty("DeviceReservationID")){
@@ -57,9 +60,11 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Return Device</h4> </div>
+                <h4 class="modal-title">Return Device</h4>
+            </div>
             <div class="modal-body">
                 <p>Are you sure you want to return this device?</p>
+            </div>
             <div class="modal-footer">
                 <button type="button" class="close-returndevice btn btn-default" data-dismiss="modal">Return</button>
             </div>
