--- a/views/roster.ejs
+++ b/views/roster.ejs
@@ -4,11 +4,10 @@
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button> <a class="navbar-brand" href="dashboard">Facilities</a> </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="reservations">Reservations</a></li>
-                <li class="active"><a href="/getalldevices">Devices</a></li>
-                <li><a href="/getallclassrooms">Classrooms</a></li>
-                <li><a href="account">Account</a></li>
-                <li><a href="" id="signOut" onclick="auth2.signOut()">Logout</a></li>
+                <li><a href="/devices">Devices</a></li>
+                <li><a href="/classrooms">Classrooms</a></li>
+                <li><a href="/account">Account</a></li>
+                <li><a href="/logout">Logout</a></li>
             </ul>
         </div>
     </div>
