--- a/views/classrooms.ejs
+++ b/views/classrooms.ejs
@@ -7,7 +7,7 @@
                 <li><a href="/getalldevices">Devices</a></li>
                 <li><a href="/getallclassrooms">Classrooms</a></li>
                 <li><a href="/getalldevicereservations">Account</a></li>
-                <li><a hrefr="/getallclassroomreservations">Classroom Reservations</a></li>
+                <li><a href="/getallclassreservations">Classroom Reservations</a></li>
                 <li><a href="/logout">Logout</a></li>
             </ul>
         </div>
