Fixed route to getalldevices

--- a/views/classrooms.ejs
+++ b/views/classrooms.ejs
@@ -5,9 +5,8 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="/getalldevices">Devices</a></li>
-                <li><a href="/getallclassrooms">Classrooms</a></li>
-                <li><a href="/getalldevicereservations">Account</a></li>
-                <li><a href="/getallclassreservations">Classroom Reservations</a></li>
+                <li><a href="/classrooms">Classrooms</a></li>
+                <li><a href="/account">Account</a></li>
                 <li><a href="/logout">Logout</a></li>
             </ul>
         </div>
