--- a/views/account.ejs
+++ b/views/account.ejs
@@ -4,7 +4,7 @@
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button> <a class="navbar-brand" href="dashboard">Facilities</a> </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/devices">Devices</a></li>
+                <li><a href="/getalldevices">Devices</a></li>
                 <li><a href="/classrooms">Classrooms</a></li>
                 <li><a href="/account">Account</a></li>
                 <li><a href="/logout">Logout</a></li>
@@ -14,40 +14,40 @@
 </nav>
 <div class="container">
     <div class="page-header">
-        <h1>Account <small>Account details</small></h1> </div>
+        <h1>Account <small>Your reservations</small></h1> </div>
     <div class="row">
-        <div class="col-sm-12 col-md-6">
-            <div id="authOps" style="display:none">
-                <h3>Account Info</h3>
-                <div id="profile"> </div>
-            </div>
-        </div>
         <div class="col-sm-12 col-md-6">
             <h2>Reserved Devices</h2>
             <table id="poop" class="table table-striped">
-              <thead>
-                <th>ID</th>
-                <th>Start Date</th>
-                <th>End Date</th>
-                <th>Return</th>
-              </thead>
-
-              <% if (userObjects){
-              if (userObjects[0].hasOwnProperty("DeviceReservationID")){
-                  for(var i=0; i < userObjects.length; i++) {%>
-                      <tbody>
+                <thead>
+                    <th>ID</th>
+                    <th>Start Date</th>
+                    <th>End Date</th>
+                    <th>Return</th>
+                </thead>
+                <% if (userObjects){ if (userObjects[0].hasOwnProperty("DeviceReservationID")){
+                  for(var i=0; i < userObjects.length; i++) { %>
+                    <tbody>
                         <tr>
-                          <td><%= userObjects[i].DeviceReservationID %></td>
-                          <td><%= userObjects[i].StartDate %></td>
-                          <td><%= userObjects[i].EndDate %></td>
-                          <td>
-                            <button type="button" class="open-returndevice btn btn-sm" data-toggle="modal" data-target="#returnDevice" data-id="<%= userObjects[i].DeviceReservationID %>">Return</button>
-                          </td>
-                          <% }}}%>
+                            <td>
+                                <%= userObjects[i].DeviceReservationID %>
+                            </td>
+                            <td>
+                                <%= userObjects[i].StartDate %>
+                            </td>
+                            <td>
+                                <%= userObjects[i].EndDate %>
+                            </td>
+                            <td>
+                                <button type="button" class="open-returndevice btn btn-sm" data-toggle="modal" data-target="#returnDevice" data-id="<%= userObjects[i].DeviceReservationID  %>">Return</button>
+                            </td>
+                            <% }}} %>
                         </tr>
-                      </tbody>
+                    </tbody>
             </table>
         </div>
+        <div class="col-sm-12 col-md-6">
+            <h2>Reserved Classrooms</h2> <a class="btn" href="/getallclassreservations">View Reservations</a> </div>
     </div>
 </div>
 <!-- Return Modal -->
@@ -57,8 +57,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Return Device</h4>
-            </div>
+                <h4 class="modal-title">Return Device</h4> </div>
             <div class="modal-body">
                 <p>Are you sure you want to return this device?</p>
             </div>
@@ -72,6 +71,8 @@
 <script>
     $(document).on("click", ".open-returndevice", function () {
         var devicereservationid = $('.open-returndevice').data('id');
-        $.post( '/removedevicereservation', {devicereservationid: 'devicereservationid'} );
+        $.post('/removedevicereservation', {
+            devicereservationid: 'devicereservationid'
+        });
     });
 </script>
