--- a/views/classReservations.ejs
+++ b/views/classReservations.ejs
@@ -1,84 +1,95 @@
 <nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button> <a class="navbar-brand" href="dashboard">Facilities</a> </div>
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="/getalldevices">Devices</a></li>
-        <li><a href="/getallclassrooms">Classrooms</a></li>
-        <li><a href="/getalldevicereservations">Account</a></li>
-        <li class="active"><a href="/getallclassreservations">Classroom Reservations</a></li>
-        <li><a href="" id="signOut" onclick="auth2.signOut()">Logout</a></li>
-      </ul>
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button> <a class="navbar-brand" href="dashboard">Facilities</a> </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="/getalldevices">Devices</a></li>
+                <li><a href="/classrooms">Classrooms</a></li>
+                <li><a href="/account">Account</a></li>
+                <li><a href="/logout">Logout</a></li>
+            </ul>
+        </div>
     </div>
-  </div>
 </nav>
 <div class="container">
-  <div class="page-header">
-    <h1>Account <small>Account details</small></h1> </div>
-  <div class="row">
-    <div class="col-sm-12 col-md-6">
-      <div id="authOps" style="display:none">
-        <h3>Account Info</h3>
-        <div id="profile"> </div>
-      </div>
-    </div>
-    <div class="col-sm-12 col-md-6">
-      <h2>Reserved Classrooms</h2>
-      <table id="poop" class="table table-striped">
-        <thead>
-        <th>ID</th>
-        <th>Instructor ID</th>
-        <th>Class ID</th>
-        <th>Start Date</th>
-        <th>End Date</th>
-        <th>Classroom ID</th>
-        <th>Return</th>
-        </thead>
-
-        <% if (userObjects){
+    <div class="page-header">
+        <h1>Account <small>Account details</small></h1> </div>
+    <div class="row">
+        <div class="col-sm-12 col-md-6">
+            <div id="authOps" style="display:none">
+                <h3>Account Info</h3>
+                <div id="profile"> </div>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-6">
+            <h2>Reserved Classrooms</h2>
+            <table id="poop" class="table table-striped">
+                <thead>
+                    <th>ID</th>
+                    <th>Instructor ID</th>
+                    <th>Class ID</th>
+                    <th>Start Date</th>
+                    <th>End Date</th>
+                    <th>Classroom ID</th>
+                    <th>Return</th>
+                </thead>
+                <% if (userObjects){
         if (userObjects[0].hasOwnProperty("ClassReservationID")){
         for(var i=0; i < userObjects.length; i++) {%>
-        <tbody>
-        <tr>
-          <td><%= userObjects[i].ClassReservationID %></td>
-          <td><%= userObjects[i].InstructorID %></td>
-          <td><%= userObjects[i].ClassID %></td>
-          <td><%= userObjects[i].StartDate %></td>
-          <td><%= userObjects[i].EndDate %></td>
-          <td><%= userObjects[i].ClassroomID %></td>
-          <td>
-            <button type="button" class="open-returnclass btn btn-sm" data-toggle="modal" data-target="#returnClass" data-id="<%= userObjects[i].ClassReservationID %>">Return</button>
-          </td>
-          <% }}}%>
-        </tr>
-        </tbody>
-      </table>
+                    <tbody>
+                        <tr>
+                            <td>
+                                <%= userObjects[i].ClassReservationID %>
+                            </td>
+                            <td>
+                                <%= userObjects[i].InstructorID %>
+                            </td>
+                            <td>
+                                <%= userObjects[i].ClassID %>
+                            </td>
+                            <td>
+                                <%= userObjects[i].StartDate %>
+                            </td>
+                            <td>
+                                <%= userObjects[i].EndDate %>
+                            </td>
+                            <td>
+                                <%= userObjects[i].ClassroomID %>
+                            </td>
+                            <td>
+                                <button type="button" class="open-returnclass btn btn-sm" data-toggle="modal" data-target="#returnClass" data-id="<%= userObjects[i].ClassReservationID %>">Return</button>
+                            </td>
+                            <% }}}%>
+                        </tr>
+                    </tbody>
+            </table>
+        </div>
     </div>
-  </div>
 </div>
 <!-- Return Modal -->
 <div id="returnClass" class="modal fade" role="dialog">
-  <div class="modal-dialog">
-    <!-- Modal content-->
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Return Classroom</h4>
-      </div>
-      <div class="modal-body">
-        <p>Are you sure you want to return this classroom?</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="close-returnclass btn btn-default" data-dismiss="modal">Return</button>
-      </div>
+    <div class="modal-dialog">
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Return Classroom</h4> </div>
+            <div class="modal-body">
+                <p>Are you sure you want to return this classroom?</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="close-returnclass btn btn-default" data-dismiss="modal">Return</button>
+            </div>
+        </div>
     </div>
-  </div>
 </div>
 <script src="/js/jquery.min.js"></script>
 <script>
-  $(document).on("click", ".open-returnclass", function () {
-    var classreservationid = $('.open-returnclass').data('id');
-    $.post( '/removeclassreservation', {classreservationid: 'classreservationid'} );
-  });
+    $(document).on("click", ".open-returnclass", function () {
+        var classreservationid = $('.open-returnclass').data('id');
+        $.post('/removeclassreservation', {
+            classreservationid: 'classreservationid'
+        });
+    });
 </script>
