--- a/views/devices.ejs
+++ b/views/devices.ejs
@@ -4,7 +4,7 @@
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button> <a class="navbar-brand" href="dashboard">Facilities</a> </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
            <ul class="nav navbar-nav navbar-right">
-                <li><a href="/devices">Devices</a></li>
+                <li><a href="/getalldevices">Devices</a></li>
                 <li><a href="/classrooms">Classrooms</a></li>
                 <li><a href="/account">Account</a></li>
                 <li><a href="/logout">Logout</a></li>
@@ -15,10 +15,6 @@
 <div class="container">
     <div class="page-header">
         <h1>Devices <small>All devices available</small></h1> </div>
-        <div class="row"/>
-        <div class="col-sm-12">
-            <p>This will show a full list of devices</p>
-        </div>
         <div class="container">
           <table class="table table-striped">
             <thead>
